--- a/style.css
+++ b/style.css
@@ -11,3 +11,22 @@
   color: blue;
   width: 30%;
 }
+
+#carousel_container {
+  display: flex;
+}
+
+#cheeseboard_image {
+  width: 25%;
+  height: 10%;
+}
+
+#carouselExampleInterval {
+  width: 50%;
+  height: 10%;
+}
+
+#macarons_image {
+  width: 25%;
+  height: 10%;
+}
