--- a/style.css
+++ b/style.css
@@ -1,15 +1,20 @@
 #main_image {
-  height: 600px;
+  height: 600px; /* Need to change height to make responsive*/
   width: 100%;
   background: url(img/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
   background-size: 1200px;
   background-repeat: no-repeat;
+  display: flex;
+  justify-content: center;
 }
 
 #company_info {
+  height: 600px; /* Need to change height to make responsive*/
+  width: 50%;
   background-color: aquamarine;
   color: blue;
-  width: 30%;
+  flex-direction: column;
+  text-align: center;
 }
 
 #carousel_container {
