--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
-#main_image {
-  height: 600px; /* Need to change height to make responsive*/
+#background_image {
+  height: 100vh;
   width: 100%;
   background: url(img/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
   background-size: 1200px;
@@ -8,19 +8,24 @@
   justify-content: center;
 }
 
-#company_info {
-  height: 600px; /* Need to change height to make responsive*/
+#text_container {
+  height: 100vh;
   width: 50%;
-  background-color: aquamarine;
+  background: rgba(124, 185, 232, 0.7);
   color: blue;
   flex-direction: column;
   text-align: center;
+}
+
+h1 {
+  margin-top: 30%;
 }
 
 #carousel_container {
   display: flex;
 }
 
+/* Change this to one class for all images in carousel not IDs*/
 #cheeseboard_image {
   width: 25%;
   height: 10%;
