--- a/style.css
+++ b/style.css
@@ -12,7 +12,7 @@
   height: 100vh;
   width: 50%;
   background: rgba(124, 185, 232, 0.7);
-  color: blue;
+  color: black;
   flex-direction: column;
   text-align: center;
 }
@@ -22,20 +22,18 @@ h1 {
 }
 
 #carousel_container {
-  display: flex;
+  display: grid;
+  gap: 0;
+  grid-template-columns: 25% 50% 25%;
+  grid-template-rows: 100%;
 }
 
 .carousel_side {
-  width: 25%;
-  height: 10%;
+  width: 350px;
+  height: 500px;
 }
 
-/*#carouselExampleInterval {
-  width: 50%;
-  height: 10%;
-}*/
-
 .carousel_image {
-  width: 50%;
-  height: 10%;
+  width: 350px;
+  height: 500px;
 }
