--- a/style.css
+++ b/style.css
@@ -1,3 +1,7 @@
+body {
+  font-family: "Sanchez", serif;
+}
+
 #company_logo {
   width: 50px;
 }
@@ -19,7 +23,7 @@
 #text_container {
   height: 100vh;
   width: 50%;
-  background: rgba(124, 185, 232, 0.7);
+  background: rgba(153, 255, 221, 0.7);
   color: black;
   flex-direction: column;
   text-align: center;
@@ -66,6 +70,7 @@ h1 {
 
 #mailing_submit {
   border: 1px solid black;
+  background-color: rgb(153, 255, 221);
   border-radius: 5px;
 }
 
