--- a/style.css
+++ b/style.css
@@ -10,6 +10,8 @@ body {
   width: 35px;
 }
 
+/*Landing Page*/
+
 #background_image {
   height: 100vh;
   width: 100%;
@@ -42,13 +44,11 @@ h1 {
 
 .carousel_side {
   width: 320px;
-  /*height: 500px;*/
   height: 100vh;
 }
 
 .carousel_image {
   width: 350px;
-  /*height: 500px;*/
   height: 100vh;
 }
 
@@ -86,4 +86,27 @@ h1 {
 .fa-brands {
   color: black;
   font-size: 2rem;
+}
+
+/*Products Page*/
+
+#category_title {
+  text-align: center;
+}
+
+.product_category {
+  margin-top: 20px;
+  margin-right: 10px;
+  margin-bottom: 20px;
+  margin-left: 10px;
+  display: grid;
+  gap: 5px;
+  grid-template-columns: 20% 20% 20% 20% 20%;
+  grid-template-rows: 50%;
+}
+
+.card {
+  border: 1px solid black;
+  width: 14rem;
+  height: 20rem;
 }
