stick navbar to the top of the page and activate all navbar links on all pages

--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   font-family: "Sanchez", serif;
+  padding-top: 100px;
 }
 
 #company_logo {
@@ -89,6 +90,15 @@ h1 {
 }
 
 /*Products Page*/
+
+section {
+  border: 1px solid black;
+  padding-top: 30px;
+}
+
+#space {
+  height: 50px;
+}
 
 #category_title {
   text-align: center;
