--- a/style.css
+++ b/style.css
@@ -18,18 +18,17 @@ nav {
 /*Landing Page*/
 
 #background_image {
-  height: 85vh;
+  height: 87vh;
   width: 100%;
   background: url(img/landing_page/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
-  /*background-size: 1300px;*/
-  background-size: contain;
+  background-size: 1300px;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
 }
 
 #text_container {
-  height: 85vh;
+  height: 87vh;
   width: 40%;
   background: rgba(165, 201, 202, 0.7);
   color: black;
@@ -50,12 +49,12 @@ h1 {
 
 .carousel_side {
   width: 378px;
-  height: 85vh;
+  height: 87vh;
 }
 
 .carousel_image {
   width: 350px;
-  height: 85vh;
+  height: 87vh;
 }
 
 #form_container {
@@ -160,21 +159,15 @@ section {
   border-bottom: 5px solid #256d85;
 }
 
-/*Media queries*/
+/*Media queries for mobile phone screens*/
 
-/*Small phone screen*/
-
-@media only screen and (min-width: 350px) and (max-width: 413px) {
-  /*Landing page*/
-}
-
-/*iPhone XR screen*/
-
-@media only screen and (min-width: 414px) and (max-width: 684px) {
+@media only screen and (min-width: 360px) and (max-width: 684px) {
   /*Landing page*/
 
   #background_image {
     height: 31vh;
+    background-size: cover;
+    width: 100%;
   }
 
   #text_container {
@@ -187,7 +180,7 @@ section {
   }
 
   p {
-    font-size: 10px;
+    font-size: 11px;
   }
 
   #carousel_container {
@@ -205,9 +198,13 @@ section {
     width: 350px;
     height: 40vh;
   }
+
+  #mailing_list {
+    padding-top: 3%;
+  }
+
+  #email {
+    margin-top: 3%;
+    margin-bottom: 3%;
+  }
 }
-
-/*Tablet screen*/
-
-/*@media only screen and (min-width: 685px) and (max-width: 767px) {
-}*/
