--- a/style.css
+++ b/style.css
@@ -209,17 +209,23 @@ section {
   section {
     border-top: none;
     border-bottom: none;
-    padding-top: 30px;
+    padding-top: 10px;
   }
 
   .space {
     height: 0;
-    background-color: white;
     border-top: none;
     border-bottom: none;
   }
 
   .product_category {
     flex-direction: column;
+    margin-bottom: 0;
+    margin-top: -10px;
+  }
+
+  .card {
+    margin-top: 10px;
+    margin-left: 20%;
   }
 }
