adjust layout of shop page on mobile screen

--- a/style.css
+++ b/style.css
@@ -273,6 +273,14 @@ input {
     margin-left: 20%;
   }
 
+  #final_card {
+    margin-bottom: 10px;
+  }
+
+  #final_section {
+    border: none;
+  }
+
   .additional_footer {
     display: none;
   }
