--- a/style.css
+++ b/style.css
@@ -73,16 +73,21 @@ h1 {
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-bottom: 3.5%;
+  padding-bottom: 2%;
   background-color: #256d85;
 }
 
+#email_error_message {
+  margin-top: 4%;
+  margin-bottom: -10px;
+}
+
 #mailing_list {
-  margin-top: 3%;
+  margin-top: 2%;
 }
 
 #email {
-  margin-top: 10%;
+  margin-top: 3%;
   border: 1px solid black;
   border-radius: 5px;
 }
