--- a/style.css
+++ b/style.css
@@ -81,15 +81,15 @@ h1 {
   margin-top: 2%;
 }
 
-#email {
+#mailing_list_email {
   margin-top: 3%;
   border: 1px solid black;
   border-radius: 5px;
 }
 
-#mailing_submit {
+#mailing_list_submit {
   border: 1px solid black;
-  background-color: rgb(165, 201, 202);
+  background-color: #a5c9ca;
   border-radius: 5px;
 }
 
@@ -174,7 +174,7 @@ section {
   height: 65vh;
   background-color: rgba(165, 201, 202, 0.7);
   padding: 20px;
-  margin-left: 7%;
+  margin-left: 6.5%;
 }
 
 input {
@@ -299,16 +299,18 @@ input {
   #login_form {
     width: 80%;
     height: 325px;
-    margin: 15px 0 0 0;
+    margin: 25px 0 0 0;
   }
 
   #register_form {
     width: 80%;
-    height: 375px;
-    margin: 15px 0 15px 0;
+    height: 350px;
+    margin: 25px 0 15px 0;
+    padding-bottom: 0;
   }
 
-  #login_button {
+  #login_button,
+  #register_button {
     margin-top: 0px;
   }
 }
