--- a/style.css
+++ b/style.css
@@ -205,13 +205,13 @@ input {
   /*Landing page*/
 
   #background_image {
-    height: 31vh;
+    height: 33vh;
     background-size: cover;
     width: 100%;
   }
 
   #text_container {
-    height: 31vh;
+    height: 33vh;
     width: 50%;
   }
 
@@ -237,6 +237,10 @@ input {
   .carousel_image {
     width: 350px;
     height: 40vh;
+  }
+
+  #form_container {
+    padding-bottom: 7%;
   }
 
   #mailing_list {
