--- a/style.css
+++ b/style.css
@@ -1,6 +1,7 @@
 body {
   font-family: "Sanchez", serif;
   padding-top: 75px;
+  /*max-width: 1440px;*/
 }
 
 nav {
@@ -29,18 +30,23 @@ footer {
 
 /*Landing Page*/
 
+/*main {
+  max-width: 1300px;
+  margin: 0;
+}*/
+
 #background_image {
-  height: 87vh;
+  height: 20vh;
   width: 100%;
   background: url(img/landing_page/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
-  background-size: 1300px;
+  background-size: 1440px;
   background-repeat: no-repeat;
   display: flex;
   justify-content: center;
 }
 
 #text_container {
-  height: 87vh;
+  height: 20vh;
   width: 40%;
   background: rgba(165, 201, 202, 0.7);
   color: black;
@@ -49,24 +55,37 @@ footer {
 }
 
 h1 {
-  margin-top: 30%;
+  margin-top: 5%;
 }
 
-#carousel_container {
+/*#carousel_container {
   display: grid;
   gap: 0;
   grid-template-columns: 30% 40% 30%;
   grid-template-rows: 85%;
+}*/
+
+#carousel_container {
+  display: flex;
+  flex-direction: row;
+  width: 1350px;
+  margin: 0;
 }
 
-.carousel_side {
+/*.carousel_side {
   width: 379px;
-  height: 87vh;
+  height: 40vh;
+}*/
+
+.carousel_side {
+  width: 30%;
+  height: 40vh;
 }
 
 .carousel_image {
-  width: 350px;
-  height: 87vh;
+  /*width: 350px;*/
+  width: 33%;
+  height: 40vh;
 }
 
 #form_container {
@@ -75,6 +94,8 @@ h1 {
   text-align: center;
   padding-bottom: 3%;
   background-color: #256d85;
+  max-width: 1440px;
+  margin: 0;
 }
 
 #mailing_list {
