--- a/style.css
+++ b/style.css
@@ -36,7 +36,7 @@ footer {
 }*/
 
 #background_image {
-  height: 20vh;
+  height: 37vh;
   width: 100%;
   background: url(img/landing_page/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
   background-size: 1440px;
@@ -46,8 +46,9 @@ footer {
 }
 
 #text_container {
-  height: 20vh;
-  width: 40%;
+  height: 37vh;
+  /*width: 540px;*/
+  width: 480px;
   background: rgba(165, 201, 202, 0.7);
   color: black;
   flex-direction: column;
@@ -68,42 +69,38 @@ h1 {
 #carousel_container {
   display: flex;
   flex-direction: row;
-  width: 1350px;
-  margin: 0;
 }
 
-/*.carousel_side {
-  width: 379px;
-  height: 40vh;
-}*/
-
 .carousel_side {
-  width: 30%;
-  height: 40vh;
+  /*width: 450px;*/
+  width: 480px;
+  height: 37vh;
+  background-color: yellow;
 }
 
 .carousel_image {
-  /*width: 350px;*/
-  width: 33%;
-  height: 40vh;
+  /*width: 540px;*/
+  width: 480px;
+  height: 37vh;
+  background-color: red;
 }
 
 #form_container {
   display: flex;
   justify-content: center;
   text-align: center;
-  padding-bottom: 3%;
+  padding-bottom: 2%;
   background-color: #256d85;
   max-width: 1440px;
   margin: 0;
 }
 
 #mailing_list {
-  margin-top: 2%;
+  margin-top: 1%;
 }
 
 #mailing_list_email {
-  margin-top: 3%;
+  margin-top: 1%;
   border: 1px solid black;
   border-radius: 5px;
 }
