--- a/style.css
+++ b/style.css
@@ -51,12 +51,21 @@ footer {
   width: 480px;
   background: rgba(165, 201, 202, 0.7);
   color: black;
-  flex-direction: column;
+  /*display: flex;
+  flex-direction: column;*/
+}
+
+#main_title {
+  margin-top: 10%;
+  font-size: 4rem;
   text-align: center;
 }
 
-h1 {
-  margin-top: 5%;
+#description {
+  width: 80%;
+  margin-left: 10%;
+  font-size: 1.25rem;
+  text-align: center;
 }
 
 /*#carousel_container {
