--- a/style.css
+++ b/style.css
@@ -11,10 +11,6 @@ nav {
   width: 50px;
 }
 
-.cart_icon {
-  width: 35px;
-}
-
 footer {
   display: flex;
   justify-content: center;
@@ -46,16 +42,17 @@ footer {
   color: black;
 }
 
-#main_title {
-  margin-top: 10%;
-  font-size: 4rem;
+#description {
+  width: 80%;
+  margin-top: 20%;
+  margin-left: 10%;
+  font-size: 2rem;
   text-align: center;
 }
 
-#description {
+#mailing_list_prompt {
   width: 80%;
   margin-left: 10%;
-  font-size: 1.25rem;
   text-align: center;
 }
 
@@ -71,6 +68,7 @@ footer {
 
 .carousel-item {
   width: 480px;
+  height: 37vh;
 }
 
 .carousel_image {
