--- a/style.css
+++ b/style.css
@@ -35,8 +35,9 @@ footer {
 }
 
 #text_container {
-  height: 37vh;
-  width: 480px;
+  /*height: 37vh;*/
+  /*width: 480px;*/
+  width: 33%;
   background: rgba(165, 201, 202, 0.7);
   color: black;
 }
@@ -56,19 +57,28 @@ footer {
 }
 
 #carousel_container {
+  display: grid;
+  gap: 0;
+  grid-template-rows: 100%;
+  grid-template-columns: 33.3% 33.3% 33.3%;
+}
+
+/*#carousel_container {
   display: flex;
   flex-direction: row;
-}
+}*/
 
-.carousel_side {
-  width: 480px;
-  height: 37vh;
-}
+/*.carousel_side {
+  /*width: 480px;*/
+/*width: 33%;*/
+/*height: 37vh;
+}*/
 
-.carousel-item {
-  width: 480px;
-  height: 37vh;
-}
+/*.carousel-item {
+  /*width: 480px;*/
+/*width: 33%;*/
+/*height: 37vh;
+}*/
 
 /*.carousel_image {
   width: 480px;
