--- a/style.css
+++ b/style.css
@@ -241,6 +241,14 @@ input {
     display: none;
   }
 
+  #additional_image_container {
+    display: none;
+  }
+
+  .additional_image {
+    display: none;
+  }
+
   #form_container {
     /*padding-bottom: 7%;*/
     padding-bottom: 16%;
@@ -326,26 +334,68 @@ input {
 /*Tablet screens*/
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   /*Landing Page*/
-  /*#carousel_container {
-  display: grid;
-  gap: 0;
-  grid-template-columns: 100%;
-  grid-template-rows: 100%;
-  }*/
 
-  .carousel_side {
-    display: none;
+  #additional_image_container {
+    display: grid;
+    gap: 0;
+    grid-template-rows: 100%;
+    grid-template-columns: 33.3% 33.3% 33.3%;
   }
 
-  /*.carousel_image {
-  width: 50%;
-  height: auto;
+  .additional_image {
+    max-width: 100%;
+    height: auto;
+  }
+
+  /*#additional_image_container {
+    display: grid;
+    gap: 0;
+    grid-template-rows: 100%;
+    grid-template-columns: 33.3% 33.3% 33.3%;
   }*/
 }
 
 /*Laptop screens*/
 @media only screen and (min-width: 769px) and (max-width: 1024px) {
+  /*Landing Page*/
+
+  #background_image {
+    height: 27vh;
+    /* background-size: cover;
+    width: 100%;*/
+  }
+
+  #text_container {
+    height: 27vh;
+    width: 33.3%;
+  }
+
+  #description {
+    font-size: 1.5rem;
+    margin-top: 25%;
+  }
+
+  #additional_image_container {
+    display: grid;
+    gap: 0;
+    grid-template-rows: 100%;
+    grid-template-columns: 33.3% 33.3% 33.3%;
+  }
+
+  .additional_image {
+    max-width: 100%;
+    height: auto;
+  }
 }
 
 /*Desktop screens*/
-/*@media only screen and (min-width: 1025px) and (max-width: 1200px) {}*/
+@media only screen and (min-width: 1025px) and (max-width: 1440px) {
+  /*Landing Page*/
+  #additional_image_container {
+    display: none;
+  }
+
+  .additional_image {
+    display: none;
+  }
+}
