--- a/style.css
+++ b/style.css
@@ -218,7 +218,11 @@ input {
     display: none;
   }
 
-  .additional_image {
+  #additional_text_container {
+    display: none;
+  }
+
+  #additional_text {
     display: none;
   }
 
@@ -307,15 +311,20 @@ input {
   /*Landing Page*/
 
   #additional_image_container {
-    display: grid;
-    gap: 0;
-    grid-template-rows: 100%;
-    grid-template-columns: 33.3% 33.3% 33.3%;
+    height: auto;
+    width: 100%;
+    background: url(img/landing_page/viktor-talashuk-BTTO404UHzA-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
   }
 
-  .additional_image {
-    max-width: 100%;
+  #additional_text_container {
     height: auto;
+    width: 33.3%;
+    background: rgba(165, 201, 202, 0.7);
+    color: black;
   }
 }
 
@@ -338,26 +347,36 @@ input {
   }
 
   #additional_image_container {
-    display: grid;
-    gap: 0;
-    grid-template-rows: 100%;
-    grid-template-columns: 33.3% 33.3% 33.3%;
+    height: 27vh;
+    width: 100%;
+    background: url(img/landing_page/viktor-talashuk-BTTO404UHzA-unsplash.jpg);
+    background-size: cover;
+    background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
   }
 
-  .additional_image {
-    max-width: 100%;
-    height: auto;
+  #additional_text_container {
+    height: 27vh;
+    width: 33.3%;
+    background: rgba(165, 201, 202, 0.7);
+    color: black;
   }
 }
 
 /*Desktop screens*/
 @media only screen and (min-width: 1025px) and (max-width: 1440px) {
   /*Landing Page*/
+
   #additional_image_container {
     display: none;
   }
 
-  .additional_image {
+  #additional_text_container {
+    display: none;
+  }
+
+  #additional_text {
     display: none;
   }
 }
