--- a/style.css
+++ b/style.css
@@ -310,8 +310,21 @@ input {
 @media only screen and (min-width: 481px) and (max-width: 768px) {
   /*Landing Page*/
 
+  #background_image {
+    height: 29vh;
+  }
+
+  #text_container {
+    height: 29vh;
+  }
+
+  #description {
+    font-size: 1.75rem;
+    margin-top: 10.5%;
+  }
+
   #additional_image_container {
-    height: auto;
+    height: 29vh;
     width: 100%;
     background: url(img/landing_page/viktor-talashuk-BTTO404UHzA-unsplash.jpg);
     background-size: cover;
@@ -321,7 +334,7 @@ input {
   }
 
   #additional_text_container {
-    height: auto;
+    height: 29vh;
     width: 33.3%;
     background: rgba(165, 201, 202, 0.7);
     color: black;
