--- a/style.css
+++ b/style.css
@@ -155,7 +155,7 @@ section {
   border-bottom: 5px solid #256d85;
 }
 
-/*Log in page*/
+/*Register page*/
 
 #login_page_background {
   height: 87vh;
@@ -272,7 +272,7 @@ input {
     border: none;
   }
 
-  /*Log in Page*/
+  /*Register page*/
 
   #login_page_background {
     height: 87vh;
@@ -306,7 +306,7 @@ input {
 
 /*Tablet screens*/
 @media only screen and (min-width: 481px) and (max-width: 768px) {
-  /*Landing Page*/
+  /*Landing page*/
 
   #background_image {
     height: 29vh;
@@ -337,8 +337,6 @@ input {
     background: rgba(165, 201, 202, 0.7);
     color: black;
   }
-
-  /*Log in Page*/
 }
 
 /*Laptop screens*/
@@ -379,7 +377,7 @@ input {
 
 /*Desktop screens*/
 @media only screen and (min-width: 1025px) and (max-width: 1440px) {
-  /*Landing Page*/
+  /*Landing page*/
 
   #additional_image_container {
     display: none;
