--- a/style.css
+++ b/style.css
@@ -1,6 +1,9 @@
+html {
+  scroll-padding-top: 75px;
+}
+
 body {
   font-family: "Sanchez", serif;
-  padding-top: 75px;
 }
 
 nav {
@@ -94,26 +97,18 @@ footer {
 }
 
 /*Shop Page*/
-
 #products {
   background-color: #a5c9ca;
 }
 
 section {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  padding-top: 0.5%;
+  /*border-top: 1px solid black;
+  border-bottom: 1px solid black;*/
+  /*padding-top: 0.5%;*/
 }
 
 #top_section {
-  border-top: none;
-}
-
-.space {
-  height: 75px;
-  background-color: white;
-  border-top: 5px solid #256d85;
-  border-bottom: 5px solid #256d85;
+  padding-top: 75px;
 }
 
 #fruit {
@@ -128,7 +123,7 @@ section {
 .product_category {
   display: flex;
   justify-content: space-around;
-  margin-bottom: 1%;
+  margin-bottom: 0.5%;
 }
 
 .card {
@@ -345,6 +340,12 @@ input {
     width: 33.3%;
     background: rgba(165, 201, 202, 0.7);
     color: black;
+  }
+
+  /*Shop page*/
+  .card {
+    width: 10rem;
+    height: 20rem;
   }
 }
 
