--- a/style.css
+++ b/style.css
@@ -324,9 +324,15 @@ input {
   }
 
   /*Shop page*/
-  .card {
-    width: 10rem;
-    height: 20rem;
+
+  .product_category {
+    display: grid;
+    grid-template-columns: auto auto;
+    grid-template-rows: auto auto auto;
+    row-gap: 3%;
+    margin-right: 10%;
+    margin-bottom: 10%;
+    margin-left: 10%;
   }
 }
 
@@ -363,6 +369,17 @@ input {
     width: 33.3%;
     background: rgba(165, 201, 202, 0.7);
     color: black;
+  }
+
+  /*Shop page*/
+
+  .product_category {
+    display: grid;
+    grid-template-columns: 33% 33% 33%;
+    grid-template-rows: auto auto;
+    row-gap: 3%;
+    margin-bottom: 4%;
+    margin-left: 10%;
   }
 }
 
