--- a/style.css
+++ b/style.css
@@ -8,6 +8,7 @@ body {
 
 nav {
   border-bottom: 1px solid gainsboro;
+  background-color: white;
 }
 
 .company_logo {
@@ -17,7 +18,10 @@ nav {
 footer {
   display: flex;
   justify-content: center;
+  background-color: white;
+  border-top: 1px solid gainsboro;
   padding-top: 0.75%;
+  padding-bottom: 0.75%;
 }
 
 .fa-brands {
@@ -28,7 +32,8 @@ footer {
 /*Landing Page*/
 
 #background_image {
-  height: auto;
+  padding-top: 75px;
+  height: 45vh;
   width: 100%;
   background: url(img/landing_page/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
   background-size: cover;
@@ -38,7 +43,7 @@ footer {
 }
 
 #text_container {
-  height: auto;
+  height: 45vh;
   width: 33.3%;
   background: rgba(165, 201, 202, 0.7);
   color: black;
@@ -47,7 +52,6 @@ footer {
 #description {
   width: 80%;
   margin-top: 20%;
-  margin-bottom: 20%;
   margin-left: 10%;
   font-size: 2rem;
   text-align: center;
@@ -134,6 +138,15 @@ footer {
   margin-top: 3%;
 }
 
+/*.additional_footer {
+  display: flex;
+  justify-content: center;
+  background-color: #efdecd;
+  border-top: 1px solid gainsboro;
+  padding-top: 0.75%;
+  padding-bottom: 0.75%;
+}*/
+
 /*Register page*/
 
 #login_page_background {
@@ -169,19 +182,19 @@ input {
   /*Landing page*/
 
   #background_image {
-    height: 33vh;
+    height: 42vh;
     background-size: cover;
     width: 100%;
   }
 
   #text_container {
-    height: 33vh;
+    height: 42vh;
     width: 65%;
   }
 
   #description {
     font-size: 1.5rem;
-    margin-top: 25%;
+    margin-top: 30%;
   }
 
   #carousel_container {
@@ -294,20 +307,20 @@ input {
   /*Landing page*/
 
   #background_image {
-    height: 29vh;
+    height: 38vh;
   }
 
   #text_container {
-    height: 29vh;
+    height: 38vh;
   }
 
   #description {
     font-size: 1.75rem;
-    margin-top: 10.5%;
+    margin-top: 12%;
   }
 
   #additional_image_container {
-    height: 29vh;
+    height: 28vh;
     width: 100%;
     background: url(img/landing_page/viktor-talashuk-BTTO404UHzA-unsplash.jpg);
     background-size: cover;
@@ -317,7 +330,7 @@ input {
   }
 
   #additional_text_container {
-    height: 29vh;
+    height: 28vh;
     width: 33.3%;
     background: rgba(165, 201, 202, 0.7);
     color: black;
@@ -341,11 +354,11 @@ input {
   /*Landing Page*/
 
   #background_image {
-    height: 25vh;
+    height: 33vh;
   }
 
   #text_container {
-    height: 25vh;
+    height: 33vh;
     width: 33.3%;
   }
 
