--- a/style.css
+++ b/style.css
@@ -53,7 +53,8 @@ footer {
   width: 80%;
   margin-top: 20%;
   margin-left: 10%;
-  font-size: 2rem;
+  /*font-size: 2rem;*/
+  font-size: calc(1.25rem + 1vw);
   text-align: center;
 }
 
@@ -193,7 +194,8 @@ input {
   }
 
   #description {
-    font-size: 1.5rem;
+    /*font-size: 1.5rem;*/
+    font-size: calc(1.25rem + 1vw);
     margin-top: 30%;
   }
 
@@ -315,7 +317,8 @@ input {
   }
 
   #description {
-    font-size: 1.4rem;
+    /*font-size: 1.4rem;*/
+    font-size: calc(1rem + 1vw);
     margin-top: 25%;
   }
 
@@ -363,8 +366,9 @@ input {
   }
 
   #description {
-    font-size: 1.5rem;
-    margin-top: 16%;
+    /*font-size: 1.5rem;*/
+    font-size: calc(1rem + 1vw);
+    margin-top: 12%;
   }
 
   #additional_image_container {
