--- a/style.css
+++ b/style.css
@@ -33,7 +33,8 @@ footer {
 
 #background_image {
   padding-top: 75px;
-  height: 45vh;
+  /*height: 45vh;*/
+  height: 25em;
   width: 100%;
   background: url(img/landing_page/markus-spiske-vyHo3nnk8G8-unsplash.jpg);
   background-size: cover;
@@ -43,7 +44,8 @@ footer {
 }
 
 #text_container {
-  height: 45vh;
+  /*height: 45vh;*/
+  height: 25em;
   width: 33.3%;
   background: rgba(165, 201, 202, 0.7);
   color: black;
@@ -183,13 +185,15 @@ input {
   /*Landing page*/
 
   #background_image {
-    height: 42vh;
+    /*height: 42vh;*/
+    height: 24em;
     background-size: cover;
     width: 100%;
   }
 
   #text_container {
-    height: 42vh;
+    /*height: 42vh;*/
+    height: 24em;
     width: 65%;
   }
 
@@ -309,11 +313,13 @@ input {
   /*Landing page*/
 
   #background_image {
-    height: 38vh;
+    /*height: 38vh;*/
+    height: 22em;
   }
 
   #text_container {
-    height: 38vh;
+    /*height: 38vh;*/
+    height: 22em;
   }
 
   #description {
@@ -323,7 +329,8 @@ input {
   }
 
   #additional_image_container {
-    height: 28vh;
+    /*height: 28vh;*/
+    height: 15em;
     width: 100%;
     background: url(img/landing_page/viktor-talashuk-BTTO404UHzA-unsplash.jpg);
     background-size: cover;
@@ -333,7 +340,8 @@ input {
   }
 
   #additional_text_container {
-    height: 28vh;
+    /*height: 28vh;*/
+    height: 15em;
     width: 33.3%;
     background: rgba(165, 201, 202, 0.7);
     color: black;
@@ -357,11 +365,13 @@ input {
   /*Landing Page*/
 
   #background_image {
-    height: 33vh;
+    /*height: 33vh;*/
+    height: 19em;
   }
 
   #text_container {
-    height: 33vh;
+    /*height: 33vh;*/
+    height: 19em;
     width: 33.3%;
   }
 
@@ -372,7 +382,8 @@ input {
   }
 
   #additional_image_container {
-    height: 25vh;
+    /*height: 25vh;*/
+    height: 14em;
     width: 100%;
     background: url(img/landing_page/viktor-talashuk-BTTO404UHzA-unsplash.jpg);
     background-size: cover;
@@ -382,7 +393,8 @@ input {
   }
 
   #additional_text_container {
-    height: 25vh;
+    /*height: 25vh;*/
+    height: 14em;
     width: 33.3%;
     background: rgba(165, 201, 202, 0.7);
     color: black;
